Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23539

When using print() it will not show up in the output until the application exits.

    XMLWordPrintable

Details

    • eebbd1ebc8c0d075abc306e6bf3d5948d8b47fcf (qt-creator/qt-creator/master)

    Description

      When using print() it will not show up in the output until the application exits. This is due to the fact the stdout is being buffered, this can be resolved by passing -u to the Python command and then it will not buffer stdout/stderr.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes